@@ -72,6 +72,7 @@
 		<dependency>
 			<groupId>com.qubit.solution.fenixedu</groupId>
 			<artifactId>fenixedu-academic-core</artifactId>
+			<version>48.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
